src/test/ui/issues/issue-55731.stderr
error: implementation of `DistributedIteratorMulti` is not general enough
  --> $DIR/issue-55731.rs:48:5
   |
LL |     multi(Map { //~ ERROR implementation of `DistributedIteratorMulti` is not general enough
   |     ^^^^^
   |
   = note: Due to a where-clause on `multi`,
   = note: `Map<Cloned<&()>, X>` must implement `DistributedIteratorMulti<&'0 ()>`, for any lifetime `'0`
   = note: but `Map<Cloned<&()>, X>` actually implements `DistributedIteratorMulti<&'1 ()>`, for some specific lifetime `'1`

error: aborting due to previous error

